Add instructions for generating a custom runtime